# pyedflib

./: MANIFEST.in  _custom_build.py  pyproject.toml
.github/workflows/: codecov.yml  tests.yml  testz_numpy_2_compatibility.yml
pyedflib/: edfwriter.py
pyedflib/_extensions/: _pyedflib.pyi
