[build-system]
# build-backend points to build.py in the project root (backend-path = ["."]).
# build.py wraps setuptools.build_meta and injects the C static library
# (c_edf) and the Cython extension (_pyedflib) at build time.
requires = [
    "setuptools>=77.0.3",
    "numpy>=1.9.1",
    "cython>=0.29",
]
build-backend = "_custom_build"
backend-path = ["."]

# ---------------------------------------------------------------------------
# Project metadata  (PEP 621)
# ---------------------------------------------------------------------------

[project]
name = "pyEDFlib"
version = "0.1.33"
description = "library to read/write EDF+/BDF+ files"
readme = "README.rst"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
    { name = "Holger Nahrstaedt", email = "nahrstaedt@gmail.com" },
]
maintainers = [
    { name = "Holger Nahrstaedt", email = "nahrstaedt@gmail.com" },
]
keywords = ["EDFlib", "European data format", "EDF", "BDF", "EDF+", "BDF+"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: C",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.9.1",
]

[project.urls]
Homepage = "https://github.com/holgern/pyedflib"

# ---------------------------------------------------------------------------
# Setuptools-specific configuration
# ---------------------------------------------------------------------------

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
include = ["pyedflib", "pyedflib.*"]

[tool.setuptools.package-data]
"pyedflib.data" = ["*.edf", "*.bdf"]
"pyedflib.tests.data" = ["*.edf", "*.bdf"]
"pyedflib._extensions" = ["*.pyx", "*.pxd", "*.pxi", "*.pyi"]

# ---------------------------------------------------------------------------
# Tool configuration (preserved from setup.cfg / existing pyproject.toml)
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py38"

[tool.ruff.lint]
extend-select = [
    "UP",   # pyupgrade
    "C4",   # flake8-comprehensions
    "ISC",  # flake8-implicit-str-concat
    "PIE",  # flake8-pie
    "FLY",  # flynt
    "PERF", # Perflint
    "RUF",  # Ruff-specific rules
]
ignore = [
    "ISC002",  # Implicitly concatenated string literals over multiple lines
    "PERF203", # `try`-`except` within a loop incurs performance overhead
    "RUF003",
    "RUF005",  # Consider iterable unpacking instead of concatenation
    "RUF012",  # Mutable class attributes should be annotated with `typing.ClassVar`
]

[tool.ruff.lint.extend-per-file-ignores]
"**/__init__.py" = ["F401", "F403"]
